--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -1,7 +1,19 @@
+@import './animated-logo.css';
+
 /* Injects Tailwind's base styles & any base styles registered by plugins. */
 @tailwind base;
 
-@layer base { /* custom CSS goes here */ }
+@layer base { /* custom CSS goes here */
+
+	html {
+		background-image: url('images/webp/bg-pink-sakura.webp');
+	}
+	body {
+    @apply max-w-hd mx-auto bg-white hd:border-l hd:border-r hd:border-pink-800 hd:shadow-2xl;
+		background-image: url('images/webp/bg-white-sakura.webp');
+	}
+
+}
 
 /* Injects Tailwind's component classes & any component classes registered by plugins. */
 @tailwind components;
