--- a/frontend/src/styles/animated-logo.css
+++ b/frontend/src/styles/animated-logo.css
@@ -1,47 +1,109 @@
-/* #al-r1, #al-r2, #al-r3, #al-r4, #al-r5, #al-r6 { */
-ring-enter {
+/* *
+ * CSS Animation for Taiyaki Sakura logo
+ * */
+
+/* *
+ * Animated Logo Global Settings
+ * */
+#al-r1, #al-r2, #al-r3, #al-r4, #al-r5, #al-r6 {
 	transform-origin: 130px 128px;
-	animation-name: ring-in;
-	animation-duration: 1s;
-	animation-timing-function: ease-in;
-	animation-fill-mode: both;
 }
 #al-r2 { animation-delay: 0.2s; }
 #al-r3 { animation-delay: 0.4s; }
 #al-r4 { animation-delay: 0.6s; }
 #al-r5 { animation-delay: 0.8s; }
 #al-r6 { animation-delay:   1s; }
+#al-r2.ring-leave { animation-delay: 0.1s; }
+#al-r3.ring-leave { animation-delay: 0.2s; }
+#al-r4.ring-leave { animation-delay: 0.1s; }
+#al-r5.ring-leave { animation-delay: 0.2s; }
+#al-r6.ring-leave { animation-delay:   0s; }
+#al-tg { transform-origin: 155px 175px; }
+#al-tf { transform-origin: 158px 140px; }
+#al-st { transform-origin: 198px 163px; }
+#al-sb { transform-origin:  39px 208px; }
 
-#al-tg {
-	transform-origin: 155px 175px;
+/* *
+ * Animated Logo Ring Group
+ * */
+.ring-enter-active {
+	animation-name: ring-in;
+	animation-duration: 1s;
+	animation-timing-function: ease-in;
+	animation-fill-mode: both;
+}
+.ring-leave-active {
+	animation-name: ring-out;
+	animation-duration: 0.5s;
+	animation-timing-function: ease-out;
+	animation-fill-mode: both;
+}
+.ring-enter, .ring-leave-to {
+  opacity: 0;
+}
+.ring-leave, .ring-enter-to {
+  opacity: 1;
+}
+
+/* *
+ * Animated Logo Taiyaki Group
+ * */
+.taiyaki-enter-active {
 	animation-name: drift;
 	animation-duration: 2s;
 	animation-timing-function: ease-in-out;
 	animation-fill-mode: both;
 }
-
-#al-tf {
-	transform-origin: 158px 140px;
+.taiyaki-leave-active {
+	animation-name: fade;
+	animation-duration: 1s;
+	animation-timing-function: ease-in-out;
+	animation-fill-mode: both;
+}
+#animated-logo:hover #al-tf,
+.taiyaki-enter-active #al-tf {
 	animation-name: wagfin;
 	animation-duration: 0.5s;
 	animation-timing-function: ease-in-out;
 	animation-fill-mode: both;
 	animation-iteration-count: 5;
 }
+.taiyaki-enter, .taiyaki-leave-to {
+  opacity: 0;
+}
+.taikyaki-leave, .taiyaki-enter-to {
+  opacity: 1;
+}
 
-#al-st, #al-sb {
-	transform-origin: 198px 163px;
+/* *
+ * Animated Logo Sakura Floral
+ * */
+#al-st {
+	animation-duration: 1.2s;
+}
+#al-sb {
+	animation-duration: 1s;
+	animation-delay: 0.2s;
+}
+.sakura-enter-active {
 	animation-name: sakura;
 	animation-duration: 1.2s;
 	animation-timing-function: ease-out;
 	animation-fill-mode: both;
-	animation-play-state: paused;
 }
-
-#al-sb {
-	transform-origin: 39px 208px;
-	animation-duration: 1s;
-	animation-delay: 0.2s;
+.sakura-leave-active {
+	animation-name: sakura;
+	animation-duration: 1.2s;
+	animation-timing-function: ease-out;
+	animation-fill-mode: both;
+	animation-direction: reverse;
+}
+.sakura-item,
+.sakura-enter, .sakura-leave-to {
+  opacity: 0;
+}
+.sakura-leave, .sakura-enter-to {
+  opacity: 1;
 }
 
 @keyframes ring-in {
@@ -49,15 +111,20 @@ ring-enter {
 	to   { transform: rotate(  0deg); opacity: 1; }
 }
 @keyframes ring-out {
-	from { transform: rotate( 0deg); opacity: 1; }
-	to   { transform: rotate(45deg); opacity: 0; }
+	from { transform: scale(1); opacity: 1; }
+	to   { transform: scale(0.5); opacity: 0; }
 }
 
 @keyframes drift {
 	from { transform: translate(-20px, 10px) rotate(-10deg); opacity: 0; }
 	50%  { opacity: 1; }
-	75%  { transform: translate( -2px,  0px) rotate(  3deg); }
-	to   { transform: translate(  0px,  0px) rotate(  0deg); }
+	75%  { transform: translate( -2px,  0px) rotate(  3deg); opacity: 1; }
+	to   { transform: translate(  0px,  0px) rotate(  0deg); opacity: 1; }
+}
+
+@keyframes fade {
+	from { opacity: 1; }
+	to   { opacity: 0; }
 }
 
 @keyframes wagfin {
