--- a/frontend/static/app.css
+++ b/frontend/static/app.css
@@ -1,6 +1,48 @@
-/* #al-r1, #al-r2, #al-r3, #al-r4, #al-r5, #al-r6 { */
-ring-enter {
+/* *
+ * CSS Animation for Taiyaki Sakura logo
+ * */
+
+/* *
+ * Animated Logo Global Settings
+ * */
+
+#al-r1, #al-r2, #al-r3, #al-r4, #al-r5, #al-r6 {
 	transform-origin: 130px 128px;
+}
+
+#al-r2 { -webkit-animation-delay: 0.2s; animation-delay: 0.2s; }
+
+#al-r3 { -webkit-animation-delay: 0.4s; animation-delay: 0.4s; }
+
+#al-r4 { -webkit-animation-delay: 0.6s; animation-delay: 0.6s; }
+
+#al-r5 { -webkit-animation-delay: 0.8s; animation-delay: 0.8s; }
+
+#al-r6 { -webkit-animation-delay:   1s; animation-delay:   1s; }
+
+#al-r2.ring-leave { -webkit-animation-delay: 0.1s; animation-delay: 0.1s; }
+
+#al-r3.ring-leave { -webkit-animation-delay: 0.2s; animation-delay: 0.2s; }
+
+#al-r4.ring-leave { -webkit-animation-delay: 0.1s; animation-delay: 0.1s; }
+
+#al-r5.ring-leave { -webkit-animation-delay: 0.2s; animation-delay: 0.2s; }
+
+#al-r6.ring-leave { -webkit-animation-delay:   0s; animation-delay:   0s; }
+
+#al-tg { transform-origin: 155px 175px; }
+
+#al-tf { transform-origin: 158px 140px; }
+
+#al-st { transform-origin: 198px 163px; }
+
+#al-sb { transform-origin:  39px 208px; }
+
+/* *
+ * Animated Logo Ring Group
+ * */
+
+.ring-enter-active {
 	-webkit-animation-name: ring-in;
 	        animation-name: ring-in;
 	-webkit-animation-duration: 1s;
@@ -10,13 +52,31 @@ ring-enter {
 	-webkit-animation-fill-mode: both;
 	        animation-fill-mode: both;
 }
-#al-r2 { -webkit-animation-delay: 0.2s; animation-delay: 0.2s; }
-#al-r3 { -webkit-animation-delay: 0.4s; animation-delay: 0.4s; }
-#al-r4 { -webkit-animation-delay: 0.6s; animation-delay: 0.6s; }
-#al-r5 { -webkit-animation-delay: 0.8s; animation-delay: 0.8s; }
-#al-r6 { -webkit-animation-delay:   1s; animation-delay:   1s; }
-#al-tg {
-	transform-origin: 155px 175px;
+
+.ring-leave-active {
+	-webkit-animation-name: ring-out;
+	        animation-name: ring-out;
+	-webkit-animation-duration: 0.5s;
+	        animation-duration: 0.5s;
+	-webkit-animation-timing-function: ease-out;
+	        animation-timing-function: ease-out;
+	-webkit-animation-fill-mode: both;
+	        animation-fill-mode: both;
+}
+
+.ring-enter, .ring-leave-to {
+  opacity: 0;
+}
+
+.ring-leave, .ring-enter-to {
+  opacity: 1;
+}
+
+/* *
+ * Animated Logo Taiyaki Group
+ * */
+
+.taiyaki-enter-active {
 	-webkit-animation-name: drift;
 	        animation-name: drift;
 	-webkit-animation-duration: 2s;
@@ -26,8 +86,20 @@ ring-enter {
 	-webkit-animation-fill-mode: both;
 	        animation-fill-mode: both;
 }
-#al-tf {
-	transform-origin: 158px 140px;
+
+.taiyaki-leave-active {
+	-webkit-animation-name: fade;
+	        animation-name: fade;
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-timing-function: ease-in-out;
+	        animation-timing-function: ease-in-out;
+	-webkit-animation-fill-mode: both;
+	        animation-fill-mode: both;
+}
+
+#animated-logo:hover #al-tf,
+.taiyaki-enter-active #al-tf {
 	-webkit-animation-name: wagfin;
 	        animation-name: wagfin;
 	-webkit-animation-duration: 0.5s;
@@ -39,8 +111,32 @@ ring-enter {
 	-webkit-animation-iteration-count: 5;
 	        animation-iteration-count: 5;
 }
-#al-st, #al-sb {
-	transform-origin: 198px 163px;
+
+.taiyaki-enter, .taiyaki-leave-to {
+  opacity: 0;
+}
+
+.taikyaki-leave, .taiyaki-enter-to {
+  opacity: 1;
+}
+
+/* *
+ * Animated Logo Sakura Floral
+ * */
+
+#al-st {
+	-webkit-animation-duration: 1.2s;
+	        animation-duration: 1.2s;
+}
+
+#al-sb {
+	-webkit-animation-duration: 1s;
+	        animation-duration: 1s;
+	-webkit-animation-delay: 0.2s;
+	        animation-delay: 0.2s;
+}
+
+.sakura-enter-active {
 	-webkit-animation-name: sakura;
 	        animation-name: sakura;
 	-webkit-animation-duration: 1.2s;
@@ -49,44 +145,73 @@ ring-enter {
 	        animation-timing-function: ease-out;
 	-webkit-animation-fill-mode: both;
 	        animation-fill-mode: both;
-	-webkit-animation-play-state: paused;
-	        animation-play-state: paused;
 }
-#al-sb {
-	transform-origin: 39px 208px;
-	-webkit-animation-duration: 1s;
-	        animation-duration: 1s;
-	-webkit-animation-delay: 0.2s;
-	        animation-delay: 0.2s;
+
+.sakura-leave-active {
+	-webkit-animation-name: sakura;
+	        animation-name: sakura;
+	-webkit-animation-duration: 1.2s;
+	        animation-duration: 1.2s;
+	-webkit-animation-timing-function: ease-out;
+	        animation-timing-function: ease-out;
+	-webkit-animation-fill-mode: both;
+	        animation-fill-mode: both;
+	animation-direction: reverse;
 }
+
+.sakura-item,
+.sakura-enter, .sakura-leave-to {
+  opacity: 0;
+}
+
+.sakura-leave, .sakura-enter-to {
+  opacity: 1;
+}
+
 @-webkit-keyframes ring-in {
 	from { transform: rotate(-45deg); opacity: 0; }
 	to   { transform: rotate(  0deg); opacity: 1; }
 }
+
 @keyframes ring-in {
 	from { transform: rotate(-45deg); opacity: 0; }
 	to   { transform: rotate(  0deg); opacity: 1; }
 }
+
 @-webkit-keyframes ring-out {
-	from { transform: rotate( 0deg); opacity: 1; }
-	to   { transform: rotate(45deg); opacity: 0; }
+	from { transform: scale(1); opacity: 1; }
+	to   { transform: scale(0.5); opacity: 0; }
 }
+
 @keyframes ring-out {
-	from { transform: rotate( 0deg); opacity: 1; }
-	to   { transform: rotate(45deg); opacity: 0; }
+	from { transform: scale(1); opacity: 1; }
+	to   { transform: scale(0.5); opacity: 0; }
 }
+
 @-webkit-keyframes drift {
 	from { transform: translate(-20px, 10px) rotate(-10deg); opacity: 0; }
 	50%  { opacity: 1; }
-	75%  { transform: translate( -2px,  0px) rotate(  3deg); }
-	to   { transform: translate(  0px,  0px) rotate(  0deg); }
+	75%  { transform: translate( -2px,  0px) rotate(  3deg); opacity: 1; }
+	to   { transform: translate(  0px,  0px) rotate(  0deg); opacity: 1; }
 }
+
 @keyframes drift {
 	from { transform: translate(-20px, 10px) rotate(-10deg); opacity: 0; }
 	50%  { opacity: 1; }
-	75%  { transform: translate( -2px,  0px) rotate(  3deg); }
-	to   { transform: translate(  0px,  0px) rotate(  0deg); }
+	75%  { transform: translate( -2px,  0px) rotate(  3deg); opacity: 1; }
+	to   { transform: translate(  0px,  0px) rotate(  0deg); opacity: 1; }
 }
+
+@-webkit-keyframes fade {
+	from { opacity: 1; }
+	to   { opacity: 0; }
+}
+
+@keyframes fade {
+	from { opacity: 1; }
+	to   { opacity: 0; }
+}
+
 @-webkit-keyframes wagfin {
 	from { transform: rotate( 0deg); }
 	25%  { transform: rotate( 5deg); }
@@ -94,6 +219,7 @@ ring-enter {
 	75%  { transform: rotate(-5deg); }
 	to   { transform: rotate( 0deg); }
 }
+
 @keyframes wagfin {
 	from { transform: rotate( 0deg); }
 	25%  { transform: rotate( 5deg); }
@@ -101,58 +227,75 @@ ring-enter {
 	75%  { transform: rotate(-5deg); }
 	to   { transform: rotate( 0deg); }
 }
+
 @-webkit-keyframes sakura {
 	from { transform: scale(0) rotate( 20deg); opacity: 0; }
 	to   { transform: scale(1) rotate(  0deg); opacity: 1; }
 }
+
 @keyframes sakura {
 	from { transform: scale(0) rotate( 20deg); opacity: 0; }
 	to   { transform: scale(1) rotate(  0deg); opacity: 1; }
 }
+
 /* Injects Tailwind's base styles & any base styles registered by plugins. */
+
 /* ! tailwindcss v2.2.19 | MIT License | https://tailwindcss.com */
+
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+
 /*
 Document
 ========
 */
+
 /**
 Use a better box model (opinionated).
 */
+
 *,
 ::before,
 ::after {
 	box-sizing: border-box;
 }
+
 /**
 Use a more readable tab size (opinionated).
 */
+
 html {
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
 	   tab-size: 4;
 }
+
 /**
 1. Correct the line height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
 */
+
 html {
 	line-height: 1.15; /* 1 */
 	-webkit-text-size-adjust: 100%; /* 2 */
 }
+
 /*
 Sections
 ========
 */
+
 /**
 Remove the margin in all browsers.
 */
+
 body {
 	margin: 0;
 }
+
 /**
 Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
 */
+
 body {
 	font-family:
 		system-ui,
@@ -165,40 +308,50 @@ body {
 		'Apple Color Emoji',
 		'Segoe UI Emoji';
 }
+
 /*
 Grouping content
 ================
 */
+
 /**
 1. Add the correct height in Firefox.
 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
 */
+
 hr {
 	height: 0; /* 1 */
 	color: inherit; /* 2 */
 }
+
 /*
 Text-level semantics
 ====================
 */
+
 /**
 Add the correct text decoration in Chrome, Edge, and Safari.
 */
+
 abbr[title] {
 	-webkit-text-decoration: underline dotted;
 	        text-decoration: underline dotted;
 }
+
 /**
 Add the correct font weight in Edge and Safari.
 */
+
 b,
 strong {
 	font-weight: bolder;
 }
+
 /**
 1. Improve consistency of default fonts in all browsers. (https://github.com/sindresorhus/modern-normalize/issues/3)
 2. Correct the odd 'em' font sizing in all browsers.
 */
+
 code,
 kbd,
 samp,
@@ -212,15 +365,19 @@ pre {
 		monospace; /* 1 */
 	font-size: 1em; /* 2 */
 }
+
 /**
 Add the correct font size in all browsers.
 */
+
 small {
 	font-size: 80%;
 }
+
 /**
 Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
 */
+
 sub,
 sup {
 	font-size: 75%;
@@ -228,32 +385,40 @@ sup {
 	position: relative;
 	vertical-align: baseline;
 }
+
 sub {
 	bottom: -0.25em;
 }
+
 sup {
 	top: -0.5em;
 }
+
 /*
 Tabular data
 ============
 */
+
 /**
 1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
 2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
 */
+
 table {
 	text-indent: 0; /* 1 */
 	border-color: inherit; /* 2 */
 }
+
 /*
 Forms
 =====
 */
+
 /**
 1. Change the font styles in all browsers.
 2. Remove the margin in Firefox and Safari.
 */
+
 button,
 input,
 optgroup,
@@ -264,102 +429,130 @@ textarea {
 	line-height: 1.15; /* 1 */
 	margin: 0; /* 2 */
 }
+
 /**
 Remove the inheritance of text transform in Edge and Firefox.
 1. Remove the inheritance of text transform in Firefox.
 */
+
 button,
 select { /* 1 */
 	text-transform: none;
 }
+
 /**
 Correct the inability to style clickable types in iOS and Safari.
 */
+
 button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
 	-webkit-appearance: button;
 }
+
 /**
 Remove the inner border and padding in Firefox.
 */
+
 ::-moz-focus-inner {
 	border-style: none;
 	padding: 0;
 }
+
 /**
 Restore the focus styles unset by the previous rule.
 */
+
 :-moz-focusring {
 	outline: 1px dotted ButtonText;
 }
+
 /**
 Remove the additional ':invalid' styles in Firefox.
 See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
 */
+
 :-moz-ui-invalid {
 	box-shadow: none;
 }
+
 /**
 Remove the padding so developers are not caught out when they zero out 'fieldset' elements in all browsers.
 */
+
 legend {
 	padding: 0;
 }
+
 /**
 Add the correct vertical alignment in Chrome and Firefox.
 */
+
 progress {
 	vertical-align: baseline;
 }
+
 /**
 Correct the cursor style of increment and decrement buttons in Safari.
 */
+
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
 	height: auto;
 }
+
 /**
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
+
 [type='search'] {
 	-webkit-appearance: textfield; /* 1 */
 	outline-offset: -2px; /* 2 */
 }
+
 /**
 Remove the inner padding in Chrome and Safari on macOS.
 */
+
 ::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
+
 /**
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Change font properties to 'inherit' in Safari.
 */
+
 ::-webkit-file-upload-button {
 	-webkit-appearance: button; /* 1 */
 	font: inherit; /* 2 */
 }
+
 /*
 Interactive
 ===========
 */
+
 /*
 Add the correct display in Chrome and Safari.
 */
+
 summary {
 	display: list-item;
 }
+
 /**
  * Manually forked from SUIT CSS Base: https://github.com/suitcss/base
  * A thin layer on top of normalize.css that provides a starting point more
  * suitable for web applications.
  */
+
 /**
  * Removes the default spacing and border for appropriate elements.
  */
+
 blockquote,
 dl,
 dd,
@@ -375,41 +568,50 @@ p,
 pre {
   margin: 0;
 }
+
 button {
   background-color: transparent;
   background-image: none;
 }
+
 fieldset {
   margin: 0;
   padding: 0;
 }
+
 ol,
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 /**
  * Tailwind custom reset styles
  */
+
 /**
  * 1. Use the user's configured `sans` font-family (with Tailwind's default
  *    sans-serif font stack as a fallback) as a sane default.
  * 2. Use Tailwind's default "normal" line-height so the user isn't forced
  *    to override it to ensure consistency even when using the default theme.
  */
+
 html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
   line-height: 1.5; /* 2 */
 }
+
 /**
  * Inherit font-family and line-height from `html` so users can set them as
  * a class directly on the `html` element.
  */
+
 body {
   font-family: inherit;
   line-height: inherit;
 }
+
 /**
  * 1. Prevent padding and border from affecting element width.
  *
@@ -435,6 +637,7 @@ body {
  *
  *    https://github.com/tailwindcss/tailwindcss/pull/116
  */
+
 *,
 ::before,
 ::after {
@@ -443,12 +646,15 @@ body {
   border-style: solid; /* 2 */
   border-color: currentColor; /* 2 */
 }
+
 /*
  * Ensure horizontal rules are visible by default
  */
+
 hr {
   border-top-width: 1px;
 }
+
 /**
  * Undo the `border-style: none` reset that Normalize applies to images so that
  * our `border-{width}` utilities have the expected effect.
@@ -458,29 +664,36 @@ hr {
  *
  * https://github.com/tailwindcss/tailwindcss/issues/362
  */
+
 img {
   border-style: solid;
 }
+
 textarea {
   resize: vertical;
 }
+
 input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1;
   color: #9ca3af;
 }
+
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   opacity: 1;
   color: #9ca3af;
 }
+
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
   color: #9ca3af;
 }
+
 button,
 [role="button"] {
   cursor: pointer;
 }
+
 /**
  * Override legacy focus reset from Normalize with modern Firefox focus styles.
  *
@@ -488,12 +701,15 @@ button,
  * as it triggers the better focus styles even for links, which still use a dotted
  * outline in Firefox by default.
  */
+
 :-moz-focusring {
 	outline: auto;
 }
+
 table {
   border-collapse: collapse;
 }
+
 h1,
 h2,
 h3,
@@ -503,14 +719,17 @@ h6 {
   font-size: inherit;
   font-weight: inherit;
 }
+
 /**
  * Reset links to optimize for opt-in styling instead of
  * opt-out.
  */
+
 a {
   color: inherit;
   text-decoration: inherit;
 }
+
 /**
  * Reset form element properties that are easy to forget to
  * style explicitly so you don't inadvertently introduce
@@ -518,6 +737,7 @@ a {
  * supplement a partial reset that is already applied by
  * normalize.css.
  */
+
 button,
 input,
 optgroup,
@@ -527,18 +747,21 @@ textarea {
   line-height: inherit;
   color: inherit;
 }
+
 /**
  * Use the configured 'mono' font family for elements that
  * are expected to be rendered with a monospace font, falling
  * back to the system monospace stack if there is no configured
  * 'mono' font family.
  */
+
 pre,
 code,
 kbd,
 samp {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
+
 /**
  * 1. Make replaced elements `display: block` by default as that's
  *    the behavior you want almost all of the time. Inspired by
@@ -555,6 +778,7 @@ samp {
  * 
  *    https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210
  */
+
 img,
 svg,
 video,
@@ -566,23 +790,28 @@ object {
   display: block; /* 1 */
   vertical-align: middle; /* 2 */
 }
+
 /**
  * Constrain images and videos to the parent width and preserve
  * their intrinsic aspect ratio.
  *
  * https://github.com/mozdevs/cssremedy/issues/14
  */
+
 img,
 video {
   max-width: 100%;
   height: auto;
 }
+
 /**
  * Ensure the default browser behavior of the `hidden` attribute.
  */
+
 [hidden] {
   display: none;
 }
+
 *, ::before, ::after {
 	--tw-translate-x: 0;
 	--tw-translate-y: 0;
@@ -597,11 +826,21 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
+	--tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+	--tw-ring-offset-width: 0px;
+	--tw-ring-offset-color: #fff;
+	--tw-ring-color: rgba(59, 130, 246, 0.5);
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
 }
+
 /* custom CSS goes here */
+
 html {
 		background-image: url('images/webp/bg-pink-sakura.webp');
 	}
+
 body {
 	margin-left: auto;
 	margin-right: auto;
@@ -609,28 +848,38 @@ body {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
+
 @media (min-width: 1921px) {
+
 	body {
 		border-left-width: 1px;
 	}
+
 	body {
 		border-right-width: 1px;
 	}
+
 	body {
 		--tw-border-opacity: 1;
 		border-color: rgba(157, 23, 77, var(--tw-border-opacity));
 	}
+
 	body {
 		--tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 		box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 	}
 }
+
 body {
 		background-image: url('images/webp/bg-white-sakura.webp');
 	}
+
 /* Injects Tailwind's component classes & any component classes registered by plugins. */
+
 /* custom CSS goes here */
+
 /* Injects Tailwind's utility classes & any utility classes registered by plugins. */
+
 .sr-only {
 	position: absolute;
 	width: 1px;
@@ -642,99 +891,135 @@ body {
 	white-space: nowrap;
 	border-width: 0;
 }
+
 .sticky {
 	position: -webkit-sticky;
 	position: sticky;
 }
+
 .top-\[-140px\] {
 	top: -140px;
 }
+
 .z-40 {
 	z-index: 40;
 }
+
 .order-3 {
 	order: 3;
 }
+
 .order-1 {
 	order: 1;
 }
+
 .order-2 {
 	order: 2;
 }
+
 .order-4 {
 	order: 4;
 }
+
 .order-5 {
 	order: 5;
 }
+
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
 }
+
 .mx-\[calc\(-1rem-5pt\)\] {
 	margin-left: calc(-1rem - 5pt);
 	margin-right: calc(-1rem - 5pt);
 }
+
 .mb-\[min\(-260px\2c calc\(-115px-20vh\)\)\] {
 	margin-bottom: min(-260px,calc(-115px - 20vh));
 }
+
 .flex {
 	display: flex;
 }
+
 .contents {
 	display: contents;
 }
+
 .h-full {
 	height: 100%;
 }
+
 .h-screen {
 	height: 100vh;
 }
+
 .w-full {
 	width: 100%;
 }
+
 .w-\[238px\] {
 	width: 238px;
 }
+
 .max-w-screen-lg {
 	max-width: 1024px;
 }
+
 .flex-none {
 	flex: none;
 }
+
 .flex-1 {
 	flex: 1 1 0%;
 }
+
 .transform {
 	transform: var(--tw-transform);
 }
+
 .items-end {
 	align-items: flex-end;
 }
+
 .gap-4 {
 	gap: 1rem;
 }
+
 .bg-red-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
 }
+
 .object-cover {
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
+
 .px-4 {
 	padding-left: 1rem;
 	padding-right: 1rem;
 }
+
 .text-center {
 	text-align: center;
 }
+
+.ring {
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
 .transition-opacity {
 	transition-property: opacity;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
+
 /* custom CSS goes here */
+
 /* Directive controlling where Tailwind injects responsive variations of utilities.
    By default Tailwind normally append these at the end of your stylesheet. */
 
