--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -7,6 +7,7 @@
 
 	html {
 		background-image: url('images/webp/bg-pink-sakura.webp');
+		scroll-behavior: smooth;
 	}
 	body {
     @apply max-w-hd mx-auto bg-white hd:border-l hd:border-r hd:border-pink-800 hd:shadow-2xl;
